<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Group19HomeControl</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_device">Device Activity</string>
    <string name="connect_on_launch">Connect On Launch</string>
    <string name="server_settings">Server Settings</string>
    <string name="connect_on_launch_summary">Connect On Launch</string>
    <string name="Checked">Checked</string>
    <string name="Unchecked">Unchecked</string>
    <string name="Unit_address">http://ohap.opimobi.com:18000</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_service_control">ServiceControl</string>
    <string name="default_server_address">http://ohap.opimobi.com:18000</string>
    <string name="value_text">Value Text</string>
    <string name="value_slider">Value Slider</string>
    <string name="value_on_off_button">Value On Off Button</string>
	<string name="server_connect">Server Connect</string>
	<string name="server_disconnect">Server Disconnect</string>
	<string name="server_force_close">Server Force Close</string>
	<string name="server_refresh">Server Refresh</string>
	<string name="server_said_error">Error from server</string>
    <string name="server_address">default server</string>
    

</resources>