<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory
        android:id="@+id/server_settings"
        android:title="@string/server_settings" 
        android:summary="@string/connect_on_launch_summary">
                    
    <CheckBoxPreference 
        android:key="connect_to_server_check"
        android:defaultValue="false"
        android:summaryOn="@string/Checked"
        android:summaryOff="@string/Unchecked" />
    
        <EditTextPreference 
        android:key="server_address"
        android:summaryOn="@string/server_address"
        android:defaultValue="http://ohap.opimobi.com:18000/"
        android:dialogTitle="@string/Unit_address" />
    
       
   
 </PreferenceCategory>
    

</PreferenceScreen>